# PearRay

./: .codacy.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  project.sh  tags
src/: CMakeLists.txt  Config.h.in  FileLogListener.cpp  FileLogListener.h  LogListener.h  Logger.cpp  Logger.h  main.cpp
src/base/: CMakeLists.txt  Enum.h  Logger.h  PR_Config.h.in  Platform.cpp  Platform.h  PrettyPrint.h  Profiler.cpp  Profiler.h  Variant.h
src/base/arch/: FileLock.cpp  FileLock.h  SharedLibrary.cpp  SharedLibrary.h
src/base/config/: Build.cpp  Build.h  Constants.inl  Git.h.in  HW_Switch.inl.in  Libraries.inl  MathGlue.inl  Pragmas.inl  SIMD.inl  TriangleOptions.h.in  Types.inl  VectorGlue.inl  Version.h.in
src/base/container/: CSV.cpp  CSV.h  IndexSort.h  Interval.h  NTree.h  NTree.inl  NTreeBuilder.h  NTreeBuilder.inl  NTreeStackBuilder.h  NTreeStackBuilder.inl  QuickSort.h  RadixSort.h
src/base/curve/: Curve.h
src/base/log/: ConsoleLogListener.cpp  ConsoleLogListener.h  FileLogListener.h  LogListener.h
src/base/math/: Bits.h  Compression.h  Concentric.h  Delaunay.cpp  Delaunay.h  Distribution1D.h  Distribution1D.inl  Fresnel.h  Generator.h  Hash.h  HemiMap.h  ImportanceSampling.h  Microfacet.h  MicrofacetReflection.h  MicrofacetTransmission.h  Normal.h  Projection.h  ProjectionMap.h  Reflection.h  RoughDistribution.h  SIMD.h  SIMathUtils.h  Sampling.h  Scattering.h  ShadingVector.h  SphereMap.h  Spherical.h  SplitSample.h  Tangent.h  Transform.h  Triangulation.h  Triangulation2D.cpp  Triangulation3D.cpp
src/base/memory/: AlignedAllocator.h  MemoryPool.h  MemoryStack.h
src/base/network/: Protocol.cpp  Protocol.h  Socket.cpp  Socket.h  SocketImplLinux.inl  SocketImplWindows.inl
src/base/serialization/: BufferSerializer.cpp  BufferSerializer.h  BufferedNetworkSerializer.cpp  BufferedNetworkSerializer.h  FileSerializer.cpp  FileSerializer.h  ISerializable.h  MemorySerializer.cpp  MemorySerializer.h  NetworkSerializer.cpp  NetworkSerializer.h  Serializer.h  Serializer.inl
src/client/: CMakeLists.txt  IProgressObserver.h  ImageUpdateObserver.cpp  ImageUpdateObserver.h  NetworkObserver.cpp  NetworkObserver.h  ProgramSettings.cpp  ProgramSettings.h  StatusObserver.cpp  StatusObserver.h  TevObserver.cpp  TevObserver.h  Utils.h  main.cpp
src/console/: CMakeLists.txt  main.cpp
src/core/: AbstractDatabase.h  CMakeLists.txt  IObject.h  Random.h  ServiceObserver.h  ServiceObserver.inl
src/core/archive/: IArchive.h
src/core/buffer/: AOV.h  AsyncFrameBuffer.h  ColorBuffer.cpp  ColorBuffer.h  FrameBuffer.h  (+17 more)
src/diagnostic/: CMakeLists.txt  main.cpp
src/entity/: Entity.cpp  Entity.h  GeometryEntity.cpp  GeometryEntity.h  MeshEntity.cpp  MeshEntity.h  SphereEntity.cpp  SphereEntity.h
src/geometry/: BoundingBox.cpp  BoundingBox.h  Face.cpp  Face.h  FacePoint.cpp  FacePoint.h  Mesh.cpp  Mesh.h  Normal.h  RandomRotationSphere.cpp  RandomRotationSphere.h  UV.h  Vertex.h
src/hardware/: CMakeLists.txt  hwinfo.cpp
src/loader/: CMakeLists.txt  DebugIO.cpp  DebugIO.h  DefaultSRGB.cpp  DefaultSRGB.h  Environment.cpp  Environment.h  Environment.inl  ImageIO.cpp  ImageIO.h  MeshLoader.h  QueryEnvironment.cpp  QueryEnvironment.h  QueryEnvironment.inl  ResourceManager.cpp  ResourceManager.h  SceneLoadContext.cpp  SceneLoadContext.h  SceneLoader.cpp  SceneLoader.h  ServiceDistributor.h  ServiceRegistry.h  WavefrontLoader.cpp  WavefrontLoader.h
src/material/: DiffuseMaterial.cpp  DiffuseMaterial.h  Material.h
src/network/: CMakeLists.txt  NetworkDisplayDriver.cpp  NetworkDisplayDriver.h
src/osl/: CMakeLists.txt  RendererService.cpp  RendererService.h  ShadingSystem.cpp  ShadingSystem.h
src/plugins/: CMakeLists.txt
src/python/: CMakeLists.txt  camera.cpp  entity.cpp  environment.cpp  geometry.cpp  infinitelight.cpp  integrator.cpp  light.cpp  logger.cpp  mat.cpp  material.cpp  math.cpp  module.cpp  npmath.cpp  npmath.h  output.cpp  profile.cpp  pymath.cpp  pymath.h  pypearray.h  ray.cpp  registry.cpp  renderentities.cpp  renderer.cpp  sampler.cpp  scene.cpp  settings.cpp  setup.py.in  shader.cpp  spectral.cpp  status.cpp  tonemapper.cpp  vec.cpp
src/ray/: Ray.cpp  Ray.h
src/renderer/: CMakeLists.txt  RenderResult.cpp  RenderResult.h  RenderThread.h  Renderer.cpp  Renderer.h
src/sandbox/: CMakeLists.txt  ProgramSettings.cpp  ProgramSettings.h  image_io.cpp  image_io.h  main.cpp  suite_material.cpp  suite_principled.cpp  suite_projection.cpp  suite_projection1.cpp  suite_random.cpp  suite_random1.cpp  suite_spectral.cpp  suite_spectral1.cpp  suite_triangle.cpp
src/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  kdTree.cpp  kdTree.h
src/skysun/: CMakeLists.txt  SkyModel.cpp
src/spectral/: ColorSpaceConverter.h  IntensityConverter.h  RGBConverter.cpp  RGBConverter.h  Spectrum.cpp  Spectrum.h
src/tests/: CMakeLists.txt  Test.h  auto_diff.cpp  bits.cpp  boundingbox.cpp  brdf.cpp  compression.cpp  concentric.cpp  csv.cpp  curve.cpp  distribution.cpp  entity.cpp  filter.cpp  fresnel.cpp  generator.cpp  inteqen.cpp  kdtree.cpp  lpe.cpp  materials.cpp  memory.cpp  microfacets.cpp  network.cpp  normal.cpp  ntree.cpp  parameter.cpp  photon.cpp  plane.cpp  pointkdtree.cpp  projection.cpp  quadric.cpp  quicksort.cpp  radixsort.cpp  random.cpp  registry.cpp  sampler.cpp  sampling.cpp  scattering.cpp  seed.cpp  simd.cpp  spectrum.cpp  (+9 more)
src/thread/: Thread.h  Thread.inl
src/tools/: CMakeLists.txt
src/ui/: CMakeLists.txt
src/utils/: CMakeLists.txt  CacheManager.cpp  CacheManager.h  Environment.cpp  Environment.h  Environment.inl  GlobalPropertyLoader.cpp  GlobalPropertyLoader.h  RenderLoader.cpp  RenderLoader.h  ResourceManager.cpp  ResourceManager.h  SceneLoadContext.h  SceneLoader.cpp  SceneLoader.h  SpectralFile.cpp  SpectralFile.h
src/vcm/: CMakeLists.txt  Defaults.h  Kernel.h  Options.h  PathVertexMap.h  Tracer.h  TracerContext.h  TracerIterationContext.h  TracerThreadContext.h  TraversalContext.h  Walker.h
src/viewer/: CMakeLists.txt  main.cpp
src/viewer_cnt/: CMakeLists.txt  Container.h  OrbitCamera.cpp  OrbitCamera.h
(+1063 files in other folders)
